--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<link rel="shortcut icon" href="./favicon.png" />
 	
-	<title>Ave HTML Template</title>
+	<title>Matrea Tech</title>
 	
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	
@@ -1118,63 +1118,7 @@
 				</div><!-- /.container -->
 			</section>
 
-			<section class="vc_row overflow-hidden">
-
-				<div class="lqd-particles-bg-wrap" style="height: 400px;">
-
-					<div class="ld-particles-container">
-						<div
-							class="ld-particles-inner"
-							id="ld-1527244273759"
-							data-particles="true"
-							data-particles-options='{"particles":{"shape":{"type":["triangle"]},"move":{"enable":true,"direction":"right","out_mode":"out"}},"interactivity":[]}'>
-						</div>
-					</div>
-	
-				</div><!-- /.lqd-particles-bg-wrap -->
-
-				<div class="container">
-					<div class="row">
-
-						<div class="lqd-column col-md-8 col-md-offset-2 text-center bg-white white-box-shadow pt-70 pb-50">
-
-							<div class="row">
-								<div class="col-md-10 col-md-offset-1">
-
-									<header class="fancy-title mb-40 px-3">
-										<h2 class="mt-4">Subscribe <span class="text-secondary">Newsletter</span></h2>
-										<p class="font-size-18">Get weekly updates on the newest design stories, case studies and tips right in your mailbox. Subscribe now!</p>
-									</header>
-		
-									<div class="ld-sf ld-sf--input-solid ld-sf--button-solid ld-sf--size-lg ld-sf--circle ld-sf--border-thin ld-sf--input-shadow ld-sf--button-show">
-										<form id="ld_subscribe_form" class="ld_sf_form" action="https://liquid-themes.us20.list-manage.com/subscribe/post?u=7f582d555cef808a99ea001a7&amp;id=58ab120d89" name="mc-embedded-subscribe-form" method="post">
-											<p class="ld_sf_paragraph pr-2">
-												<input type="email" class="ld_sf_text" id="mce-EMAIL" name="EMAIL" placeholder="Enter your email address" value="">
-											</p>
-											<button type="submit" class="ld_sf_submit font-weight-semibold bg-gradient-secondary-lr">
-												<span class="submit-icon font-size-26">
-													<i class="icon-md-paper-plane"></i>
-												</span>
-												<span class="submit-text">Subscribe me</span>
-												<span class="ld-sf-spinner">
-													<span>Sending </span>
-												</span>
-											</button>
-										</form>
-										<div class="ld_sf_response"></div>
-									</div><!-- /.ld-sf -->
-
-								</div><!-- /.col-md-10 col-md-offset-1 -->
-							</div><!-- /.row -->
-
-						</div><!-- /.col-md-6 col-md-offset-3 -->
-
-					</div><!-- /.row -->
-				</div><!-- /.container -->
-				
-			</section>
-		
-		</main>
+			
 	
 		<footer class="main-footer pt-100 pb-90">
 			
