--- a/index.html
+++ b/index.html
@@ -314,11 +314,7 @@
 										<span class="liquid-img-group-url"><span>http://</span>ave.com/</span>
 										<div class="liquid-img-group-img-container">
 											<div class="liquid-img-group-content content-floated-mid-left">
-												<a href="https://www.youtube.com/watch?v=hMORz4ihnhU&feature=youtu.be" class="btn btn-naked text-uppercase btn-gradient fresco btn-icon-block btn-icon-top btn-icon-xlg btn-icon-circle btn-icon-solid font-size-13 text-dark">
-													<span>
-														<span class="btn-txt">Learn More</span>
-														<span class="btn-icon bg-gradient-secondary-lr font-size-24"><i class="fa fa-play"></i></span>
-													</span>
+												<a src="assets/img/henley-design-studio-XbZgARqXROc-unsplash.jpg" class="btn btn-naked text-uppercase btn-gradient fresco btn-icon-block btn-icon-top btn-icon-xlg btn-icon-circle btn-icon-solid font-size-13 text-dark">
 												</a>
 											</div><!-- /.liquid-img-group-content -->
 											<div class="liquid-img-container-inner">
