--- a/index.html
+++ b/index.html
@@ -313,13 +313,9 @@
 									<div class="liquid-img-group-single liquid-img-group-browser" data-shadow-style="4" data-inview="true" data-animate-shadow="true" data-reveal="true" data-reveal-options='{"direction":"lr"}'>
 										<img src="./assets/demo/misc/browser-sc.jpg" alt="Ave" />
 										<div class="liquid-img-group-img-container">
-											<div class="liquid-img-group-content content-floated-mid-left">
-												<a src="assets/img/henley-design-studio-XbZgARqXROc-unsplash.jpg" class="btn btn-naked text-uppercase btn-gradient fresco btn-icon-block btn-icon-top btn-icon-xlg btn-icon-circle btn-icon-solid font-size-13 text-dark">
-												</a>
-											</div><!-- /.liquid-img-group-content -->
 											<div class="liquid-img-container-inner">
 												<figure data-responsive-bg="true">
-													
+													<img src="assets/img/henley-design-studio-XbZgARqXROc-unsplash.jpg" alt="Ave" />
 												</figure>
 											</div><!-- /.liquid-img-container-inner -->
 										</div><!-- /.liquid-img-group-img-container -->
