--- a/index.html
+++ b/index.html
@@ -310,6 +310,17 @@
 
 							<div class="liquid-img-group-container stretch-to-right">
 								<div class="liquid-img-group-inner">
+									<div class="liquid-img-group-single liquid-img-group-browser" data-shadow-style="4" data-inview="true" data-animate-shadow="true" data-reveal="true" data-reveal-options='{"direction":"lr"}'>
+										<span class="liquid-img-group-url"><span>http://</span>youtube.com</span>
+										<div class="liquid-img-group-img-container">
+											<div class="liquid-img-group-content content-floated-mid-left">
+												<a href="https://www.youtube.com/watch?v=hMORz4ihnhU&feature=youtu.be" class="btn btn-naked text-uppercase btn-gradient fresco btn-icon-block btn-icon-top btn-icon-xlg btn-icon-circle btn-icon-solid font-size-13 text-dark">
+													<span>
+														<span class="btn-txt">Watch our Video!</span>
+														<span class="btn-icon bg-gradient-secondary-lr font-size-24"><i class="fa fa-play"></i></span>
+													</span>
+												</a>
+											</div><!-- /.liquid-img-group-content -->
 											<div class="liquid-img-container-inner">
 												<figure data-responsive-bg="true">
 													<img src="assets/img/henley-design-studio-XbZgARqXROc-unsplash.jpg" alt="Ave" />
@@ -318,7 +329,7 @@
 										</div><!-- /.liquid-img-group-img-container -->
 									</div><!-- /.liquid-img-group-single -->
 								</div><!-- /.liquid-img-group-inner -->
-							</div><!-- /.liquid-img-group-container -->
+							</div><!-- /.liquid-img-group-conta
 
 						</div><!-- /.col-lg-6 col-lg-offset-2 -->
 
