--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 							<div class="liquid-img-group-container stretch-to-right">
 								<div class="liquid-img-group-inner">
 									<div class="liquid-img-group-single liquid-img-group-browser" data-shadow-style="4" data-inview="true" data-animate-shadow="true" data-reveal="true" data-reveal-options='{"direction":"lr"}'>
-										<span class="liquid-img-group-url"><span>http://</span>youtube.com</span>
+										<span class="liquid-img-group-url"><span>http://</span>matrea.tech</span>
 										<div class="liquid-img-group-img-container">
 											<div class="liquid-img-group-content content-floated-mid-left">
 											</div><!-- /.liquid-img-group-content -->
