--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 											<a href="#">
 												<span class="link-icon"></span>
 												<span class="link-txt">
-													<span class="link-ext"></span>
-													<span class="txt">About</span>
+													<span class="link-ext">About Us</span>
+													<span class="txt">About Us</span>
 												</span>
 											</a>
 										</li>
@@ -80,8 +80,8 @@
 											<a href="#">
 												<span class="link-icon"></span>
 												<span class="link-txt">
-													<span class="link-ext"></span>
-													<span class="txt">Portfolio</span>
+													<span class="link-ext">approach</span>
+													<span class="txt">Our Approach</span>
 												</span>
 											</a>
 										</li>
@@ -175,7 +175,7 @@
 										data-custom-animations="true"
 										data-ca-options='{"triggerHandler":"inview","animationTarget":"all-childs","duration":"1200","delay":"150", "startDelay": 120,"easing":"easeOutQuint","direction":"forward","initValues":{"translateY":26,"opacity":0},"animations":{"translateY":0,"opacity":1}}'>
 
-										<p class="font-size-20 px-md-4 mb-md-7" data-split-text="true" data-split-options='{"type":"lines"}'>Our vision is to use aritficial wombs to empower working moms.</p>
+										<p class="font-size-20 px-md-4 mb-md-7" data-split-text="true" data-split-options='{"type":"lines"}'>Our vision is to use artficial wombs to empower working moms.</p>
 										
 										<p class="font-size-13 text-uppercase ltr-sp-1 text-dark mt-90">Keep Connected</p>
 										<ul class="social-icon social-icon-md">
@@ -213,7 +213,7 @@
 			
 			</section>
 
-			<section class="vc_row pt-140 pb-120 bg-light">
+			<section class="vc_row pt-140 pb-120 bg-light" data-navigation-tooltip="About Us">
 
 				<div class="container">
 					<div class="row d-flex flex-wrap align-items-center">
