--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 											<a href="#">
 												<span class="link-icon"></span>
 												<span class="link-txt">
-													<span class="link-ext">About Us</span>
+													<!-- <span class="link-ext">About Us</span> -->
+													<li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
 													<span class="txt">About Us</span>
 												</span>
 											</a>
