--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 												<span class="link-icon"></span>
 												<span class="link-txt">
 													<!-- <span class="link-ext">About Us</span> -->
-													<li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
-													<span class="txt">About Us</span>
+													<li data-menuanchor="about" class="list-group-item"><a href="#about">About us</a></li>
+													<!-- <span class="txt">About Us</span> -->
 												</span>
 											</a>
 										</li>
