--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 											<a href="#">
 												<span class="link-icon"></span>
 												<span class="link-txt">
-													<!-- <span class="link-ext">About Us</span> -->
-													<li data-menuanchor="about" class="list-group-item"><a href="#about">About us</a></li>
-													<!-- <span class="txt">About Us</span> -->
+													<span class="link-ext">About Us</span>
+													<span class="txt">About Us</span>
 												</span>
 											</a>
 										</li>
@@ -171,38 +170,13 @@
 								>Matrea Tech</h2>
 
 								<div class="row">
-									<div
-										class="lqd-column col-md-8 col-md-offset-2 px-3"
-										data-custom-animations="true"
-										data-ca-options='{"triggerHandler":"inview","animationTarget":"all-childs","duration":"1200","delay":"150", "startDelay": 120,"easing":"easeOutQuint","direction":"forward","initValues":{"translateY":26,"opacity":0},"animations":{"translateY":0,"opacity":1}}'>
-
-										<p class="font-size-20 px-md-4 mb-md-7" data-split-text="true" data-split-options='{"type":"lines"}'>Our vision is to use artficial wombs to empower working moms.</p>
-										
-										<p class="font-size-13 text-uppercase ltr-sp-1 text-dark mt-90">Keep Connected</p>
-										<ul class="social-icon social-icon-md">
-											<li>
-												<a href="#" target="_blank">
-													<i class="fa fa-facebook"></i>
-												</a>
-											</li>
-											<li>
-												<a href="#" target="_blank">
-													<i class="fa fa-twitter"></i>
-												</a>
-											</li>
-											<li>
-												<a href="#" target="_blank">
-													<i class="fa fa-behance"></i>
-												</a>
-											</li>
-											<li>
-												<a href="#" target="_blank">
-													<i class="fa fa-dribbble"></i>
-												</a>
-											</li>
-										</ul>
-
-									</div><!-- /.col-md-8 col-md-offset-2 -->
+									<div class="col-lg-8 offset-lg-2 overlay-nav">
+									<ul class="list-group text-left" id="myMenu">
+									    <li data-menuanchor="hero" class="list-group-item"><a href="#hero">Home</a></li>
+									    <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
+									    <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
+									    <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>
+									</ul>
 								</div><!-- /.row -->
 
 							</div><!-- /.lqd-column-inner -->
