--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a href="#about">
 												<span class="link-icon"></span>
 												<span class="link-txt">
 													<span class="link-ext">About Us</span>
@@ -77,29 +77,20 @@
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a href="#approach">
 												<span class="link-icon"></span>
 												<span class="link-txt">
-													<span class="link-ext">approach</span>
+													<span class="link-ext"></span>
 													<span class="txt">Our Approach</span>
 												</span>
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a href="#team">
 												<span class="link-icon"></span>
 												<span class="link-txt">
 													<span class="link-ext"></span>
-													<span class="txt">Features</span>
-												</span>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<span class="link-icon"></span>
-												<span class="link-txt">
-													<span class="link-ext"></span>
-													<span class="txt">Team</span>
+													<span class="txt">Meet the Team</span>
 												</span>
 											</a>
 										</li>
@@ -158,8 +149,7 @@
 							<div
 								class="lqd-column-inner w-100 text-center"
 								data-custom-animations="true"
-								data-ca-options='{"triggerHandler":"inview","animationTarget":"all-childs","duration":"1200","delay":"150","easing":"easeOutQuint","direction":"forward","initValues":{"translateY":26,"opacity":0},"animations":{"translateY":0,"opacity":1}}'
-							>
+								data-ca-options='{"triggerHandler":"inview","animationTarget":"all-childs","duration":"1200","delay":"150","easing":"easeOutQuint","direction":"forward","initValues":{"translateY":26,"opacity":0},"animations":{"translateY":0,"opacity":1}}'>
 
 								<h2
 								class="mt-md-6 mt-0 mb-4 mb-2 lh-1"
@@ -168,16 +158,38 @@
 								data-split-text="true"
 								data-split-options='{"type":"words"}'
 								>Matrea Tech</h2>
+	<div
+										class="lqd-column col-md-8 col-md-offset-2 px-3"
+										data-custom-animations="true"
+										data-ca-options='{"triggerHandler":"inview","animationTarget":"all-childs","duration":"1200","delay":"150", "startDelay": 120,"easing":"easeOutQuint","direction":"forward","initValues":{"translateY":26,"opacity":0},"animations":{"translateY":0,"opacity":1}}'>
 
-								<div class="row">
-									<div class="col-lg-8 offset-lg-2 overlay-nav">
-									<ul class="list-group text-left" id="myMenu">
-									    <li data-menuanchor="hero" class="list-group-item"><a href="#hero">Home</a></li>
-									    <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
-									    <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
-									    <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>
-									</ul>
-								</div><!-- /.row -->
+										<p class="font-size-20 px-md-4 mb-md-7" data-split-text="true" data-split-options='{"type":"lines"}'>Our vision is to use artficial wombs to empower working moms.</p>
+										
+										<p class="font-size-13 text-uppercase ltr-sp-1 text-dark mt-90">Keep Connected</p>
+										<ul class="social-icon social-icon-md">
+											<li>
+												<a href="#" target="_blank">
+													<i class="fa fa-facebook"></i>
+												</a>
+											</li>
+											<li>
+												<a href="#" target="_blank">
+													<i class="fa fa-twitter"></i>
+												</a>
+											</li>
+											<li>
+												<a href="#" target="_blank">
+													<i class="fa fa-behance"></i>
+												</a>
+											</li>
+											<li>
+												<a href="#" target="_blank">
+													<i class="fa fa-dribbble"></i>
+												</a>
+											</li>
+										</ul>
+
+									</div><!-- /.col-md-8 col-md-offset-2 -->
 
 							</div><!-- /.lqd-column-inner -->
 							
@@ -188,7 +200,7 @@
 			
 			</section>
 
-			<section class="vc_row pt-140 pb-120 bg-light" data-navigation-tooltip="About Us">
+			<section id= "about"class="vc_row pt-140 pb-120 bg-light" data-navigation-tooltip="About Us">
 
 				<div class="container">
 					<div class="row d-flex flex-wrap align-items-center">
