--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 			<!--	</div><!-- /.container -->
 		<!--	</section> -->
 
-			<section class="vc_row pt-75 pb-40" data-custom-animations="true" data-ca-options='{"triggerHandler":"inview","animationTarget":".lqd-column","duration":"1200","delay":"150","easing":"easeOutQuint","direction":"forward","initValues":{"translateY":43,"opacity":0},"animations":{"translateY":0,"opacity":1}}'>
+			<section id ="approach" class="vc_row pt-75 pb-40" data-custom-animations="true" data-ca-options='{"triggerHandler":"inview","animationTarget":".lqd-column","duration":"1200","delay":"150","easing":"easeOutQuint","direction":"forward","initValues":{"translateY":43,"opacity":0},"animations":{"translateY":0,"opacity":1}}'>
 				<div class="container">
 
 					<div class="row" >
@@ -867,7 +867,7 @@
 			<!--	</div><!-- /.container -->
 			<!--</section> -->
 
-			<section class="vc_row pt-40 pb-90" data-custom-animations="true" data-ca-options='{"triggerHandler":"inview","animationTarget":".lqd-column","duration":"1200","delay":"150","easing":"easeOutQuint","direction":"forward","initValues":{"translateY":55,"rotateX":-1,"opacity":0},"animations":{"translateY":0,"rotateX":0,"opacity":1}}'>
+			<section id ="team" class="vc_row pt-40 pb-90" data-custom-animations="true" data-ca-options='{"triggerHandler":"inview","animationTarget":".lqd-column","duration":"1200","delay":"150","easing":"easeOutQuint","direction":"forward","initValues":{"translateY":55,"rotateX":-1,"opacity":0},"animations":{"translateY":0,"rotateX":0,"opacity":1}}'>
 				<div class="container">
 
 					<div class="row">
@@ -876,7 +876,7 @@
 
 							<header class="fancy-title mb-70 text-center">
 								<h2 class="mt-0"><span class="text-secondary">Meet the Team</h2>
-								<p class="font-size-18">Don’t just take our words for it. Our clients are our biggest supporters. Would you like to know what they think about us?</p>
+								<p class="font-size-18">Get to know the team working on this project!</p>
 							</header>
 
 						</div><!-- /.col-md-6 -->
@@ -1014,7 +1014,7 @@
 				</div><!-- /.container -->
 			</section>
 
-			<section class="vc_row pt-100 pb-60">
+			<section id="blog" class="vc_row pt-100 pb-60">
 				<div class="container">
 					<div class="row">
 
