--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 											<a href="#about">
 												<span class="link-icon"></span>
 												<span class="link-txt">
-													<span class="link-ext">About Us</span>
+													<span class="link-ext"></span>
 													<span class="txt">About Us</span>
 												</span>
 											</a>
