--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#3ed2a7">
 	
-	<link rel="shortcut icon" href="./favicon.png" />
+	<link rel="shortcut icon" href="./assets/img/logo/logo.png" />
 	
 	<title>Matrea Tech</title>
 	
@@ -39,7 +39,7 @@
 								<div class="navbar-header">
 									<a class="navbar-brand" href="index-services.html" rel="home">
 										<span class="navbar-brand-inner">
-											<img class="logo-default" src="./assets/img/logo/logo.png" alt="Ave HTML Template">
+											<img class="logo-default" src="./assets/img/logo/logo.png" alt="Matrea">
 										</span>
 									</a>
 									<button type="button" class="navbar-toggle collapsed nav-trigger style-mobile" data-toggle="collapse" data-target="#main-header-collapse" aria-expanded="false" data-changeclassnames='{ "html": "mobile-nav-activated overflow-hidden" }'>
