--- a/index.html
+++ b/index.html
@@ -168,23 +168,13 @@
 										<p class="font-size-13 text-uppercase ltr-sp-1 text-dark mt-90">Keep Connected</p>
 										<ul class="social-icon social-icon-md">
 											<li>
-												<a href="#" target="_blank">
-													<i class="fa fa-facebook"></i>
+												<a href="https://www.instagram.com/matreatech/" target="_blank">
+													<i class="fa fa-instagram"></i>
 												</a>
 											</li>
 											<li>
-												<a href="#" target="_blank">
+												<a href="https://twitter.com/matreatech" target="_blank">
 													<i class="fa fa-twitter"></i>
-												</a>
-											</li>
-											<li>
-												<a href="#" target="_blank">
-													<i class="fa fa-behance"></i>
-												</a>
-											</li>
-											<li>
-												<a href="#" target="_blank">
-													<i class="fa fa-dribbble"></i>
 												</a>
 											</li>
 										</ul>
