--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 									<div id="collapse2" class="accordion-collapse collapse" role="tabpanel" aria-labelledby="heading2">
 							
 										<div class="accordion-content">
-											<p>We believe that maternal health is different for everyone. Everyone's experience is different and based on the healthcare and education system where they are from, it may differ. We believe that by creating a </p>
+											<p>We believe that maternal health is different for everyone. Everyone's experience is different and based on the healthcare and education system where they are from, it may differ. We believe that we can fill that gap by making Matrea into a valuable resource for everyone. </p>
 										</div><!-- /accordion-content -->
 										
 									</div><!-- /accordion-collapse -->
